# HaskellWordleProject

./: Main.hs  README.md  Wordle.cabal  Words.hs
