name:           Wordle
version:        0.1.0.0
build-type:     Simple
cabal-version:  >= 2.0

executable Wordle-exe
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.14 && < 5,
                       random >= 1.2.0
  ghc-options:         -Wall -O2
